--- a/index.html
+++ b/index.html
@@ -368,8 +368,10 @@
                                         </div>
                                         <div class="content">
                                             <h3 class="title">Commercial Spaces &amp; Corporate Events</h3>
-                                            <p>I throw myself down among the tall grass by the stream as I lie close to
-                                                the earth.</p>
+                                            <p>I am forever passionate about creating the perfect vibe for any event. While I spend many evenings in various venues entertaining club-goers and those who love to dance, my expertise extends beyond the club scene.</p>
+                                            <p>One of Toronto's best-kept secrets is my ability to cater to corporate events and any industry, bringing professionalism and high-quality music to any function. I'm incredibly versatile, able to provide a sound system setup for any sized room or travel light with just my music.</p>
+                                            <p>I have the skills necessary to manage sound systems and tailor the soundtrack to fit the demographics of the event. Whether I'm playing in the background or taking center stage, I can toggle back-and-forth with ease. I'm able to queue event audio, mix presentations, and even get people on their feet dancing. These are essential skills that a corporate sound and music professional should possess, and it's what I bring to the table.</p>
+                                            <p>I pride myself on my adaptability and responsiveness, which is what keeps me at my professional best. I've had the opportunity to DJ for a wide range of corporate clients, including the Olivia Chow campaign, Degrassi (TV show), Battle of the Blades, The Blue Jays, Enterprise, Procter & Gamble, Mackenzie Investments, Sapient Canada, Miss Toronto boat cruises, Toronto Film Festival, University of Toronto, Yahoo Canada, and many more.</p>
                                         </div>
                                     </div>
                                 </a>
@@ -387,8 +389,10 @@
                                         </div>
                                         <div class="content">
                                             <h3 class="title">Engagements, Weddings &amp; Receptions</h3>
-                                            <p>I throw myself down among the tall grass by the stream as I lie close to
-                                                the earth.</p>
+                                            <p>Engagements and weddings are some of the most important days of your life, and you want everything to be perfect. That's where I come in. With years of experience and a deep understanding of the diversity of your guests, I can guarantee that everyone will be entertained, and you will have peace of mind.</p>
+                                            <p>From punctuality to presentation, flexibility to appropriate music, diplomacy to accommodation, I take care of all the details so that you can enjoy your special day. My personality shines through as I work with your family and friends to create a fun and personalized atmosphere that everyone will enjoy.</p>
+                                            <p>As a fervent and dedicated professional, I have an extensive and eclectic library of songs that allows me to play a wide range of genres, including top 40 hits, rock classics, pop beats, jazz numbers, hip-hop tracks, and much more. I work with you to build a personalized track list, and I also craft a do-not-play list to ensure that everything is perfect.</p>
+                                            <p>My packages include microphones, sound systems, a photo booth, disco ball, and rehearsal party performances. When you book me for your wedding, rehearsal party, engagement party, buck & doe, anniversary, vow renewal, or any other nuptial-related event, you can rest assured that I will make sure everyone has a great time.</p>
                                         </div>
                                     </div>
                                 </a>
