--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@
                                             <h3 class="title">Events, Venues &amp; Residencies</h3>
                                             <p>I’ve been a fixture in Toronto’s music scene since 1998 as both a DJ and promoter. My versatility, passion, and knowledge of music have allowed me to become one of Toronto’s finest in hip hop, house, neo-soul and more.</p>
                                             <p>Over the years, I've held a long residencies at numerous venue, such as Stone Lounge at Revival Bar (Toronto), and have always performed at events peppered throughout the city. My musical mantra is “A DJ is like a preacher speaking to a multitude of people, I speak with bass lines, vocals, and chords”.</p>
-                                            <p>You can catch me regularly at various venues, house music events, and landing establishments throughout the city. I've worked some of Toronto’s biggest events, such as The Main Ingredient, Sweet Tears, Hip Hop Vs. House, and Tortured Soul show. If I'm on the bill, expect good music!</p>
+                                            <p>You can catch me regularly at various venues, house music events, and landing establishments throughout the city. I've worked some of Toronto’s biggest events, such as:<br><br>The Main Ingredient<br>Sweet Tears<br>Hip Hop Vs. House<br>Tortured Soul show</p>
+                                            <p>If I'm on the bill, expect good music!</p>
                                             <p>If you're interested in taking advantage of my decades of expertise for your event and/or venue, let's talk about it! I'm always interested in entertaining the crowd with music they can feel!</p>
                                         </div>
                                     </div>
