--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                             <div class="tab-pane fade" id="rn-awards" role="tabpanel" aria-labelledby="awards">
                                                 <div class="single-tab-content">
                                                     <div class="con-maindemo" id="a-demo" style="margin: 0px ">
-                                                        <div class="ap-wrapper center-ap" style="width:100%;background: #000">
+                                                        <div class="ap-wrapper center-ap" style="width:100%;background: transparent;">
                                                             <div class="the-bg" style=" ;"></div>
 
                                                             <div class="audiogallery-con">
@@ -242,7 +242,7 @@
                                             <div class="tab-pane fade" id="rn-experience" role="tabpanel" aria-labelledby="experience">
                                                 <div class="single-tab-content">
                                                     <div class="con-maindemo" id="a-demo" style="margin: 0px ">
-                                                        <div class="ap-wrapper center-ap" style="width:100%;background: #000">
+                                                        <div class="ap-wrapper center-ap" style="width:100%;background: transparent;">
                                                             <div class="the-bg" style=" ;"></div>
 
                                                             <div class="audiogallery-con">
