--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
                                                     </div>
                                                     <div class="tab-footer">
-                                                        <p><a href="https://www.mixcloud.com/cdawkins" target="_blank">Hear more on Mixcloud ></a></p>
+                                                        <p><a href="https://www.mixcloud.com/cdawkins" target="_blank"><small>Hear more on Mixcloud ></small></a></p>
                                                     </div>
                                                 </div>
                                             </div>
@@ -319,7 +319,7 @@
 
                                                     </div>
                                                     <div class="tab-footer">
-                                                        <p><a href="https://coreydawkins.bandcamp.com" target="_blank">Hear more on Bandcamp ></a></p>
+                                                        <p><a href="https://coreydawkins.bandcamp.com" target="_blank"><small>Hear more on Bandcamp ></small></a></p>
                                                     </div>
                                                 </div>
                                             </div>
