--- a/index.html
+++ b/index.html
@@ -520,12 +520,11 @@
                                     </a>
                                 </div>
                                 <div class="content">
-                                    <p class="blogtype">Development</p>
-                                    <h4 class="title"><a href="blog-details.html">Getting tickets to the big show</a>
-                                    </h4>
-                                    <div class="blog-btn">
+                                    <p class="blogtype">&nbsp;</p>
+                                    <h4 class="title">&nbsp;</h4>
+                                    <!--<div class="blog-btn">
                                         <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
@@ -537,12 +536,11 @@
                                     </a>
                                 </div>
                                 <div class="content">
-                                    <p class="blogtype">Development</p>
-                                    <h4 class="title"><a href="blog-details.html">Getting tickets to the big show</a>
-                                    </h4>
-                                    <div class="blog-btn">
+                                    <p class="blogtype">&nbsp;</p>
+                                    <h4 class="title">&nbsp;</h4>
+                                    <!--<div class="blog-btn">
                                         <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
@@ -554,12 +552,11 @@
                                     </a>
                                 </div>
                                 <div class="content">
-                                    <p class="blogtype">Development</p>
-                                    <h4 class="title"><a href="blog-details.html">Getting tickets to the big show</a>
-                                    </h4>
-                                    <div class="blog-btn">
+                                    <p class="blogtype">&nbsp;</p>
+                                    <h4 class="title">&nbsp;</h4>
+                                    <!--<div class="blog-btn">
                                         <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>
+                                    </div>-->
                                 </div>
                             </div>
                         </div>
