--- a/index.html
+++ b/index.html
@@ -563,9 +563,9 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="view-more-btn mt--60 mt_sm--30 text-center">
+                            <!--<div class="view-more-btn mt--60 mt_sm--30 text-center">
                                 <a class="rn-button-style--2 btn_solid" href="#">View More</a>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
