--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                                             <p>Over the years, I've held a long residencies at numerous venue, such as Stone Lounge at Revival Bar (Toronto), and have always performed at events peppered throughout the city. My musical mantra is “A DJ is like a preacher speaking to a multitude of people, I speak with bass lines, vocals, and chords”.</p>
                                             <p>You can catch me regularly at various venues, house music events, and landing establishments throughout the city. I've worked some of Toronto’s biggest events, such as:<br><br>The Main Ingredient<br>Sweet Tears<br>Hip Hop Vs. House<br>Tortured Soul show</p>
                                             <p>If I'm on the bill, expect good music!</p>
-                                            <p>If you're interested in taking advantage of my decades of expertise for your event and/or venue, let's talk about it! I'm always interested in entertaining the crowd with music they can feel!</p>
+                                            <p>Are you considering taking advantage of my decades of experience and expertise for your event and/or venue? Let's talk about it! I'm always interested in entertaining the crowd with music they can feel!</p>
                                         </div>
                                     </div>
                                 </a>
@@ -612,7 +612,7 @@
                 </div>
             </div>
         </main>
-        <div class="footer-style-2 ptb--30 bg_image--5" data-black-overlay="6" style="background-color: #f9004d;">
+        <div class="footer-style-2 ptb--30" data-black-overlay="5" style="background-color: #f9004d;">
             <div class="wrapper plr--50 plr_sm--20">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-lg-4 col-md-6 col-sm-6 col-12">
