--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body class="position-relative spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
+<body class="position-relative spybody active-dark-mode" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
     <div class="main-page">
 
         <!-- Start Header Area  -->
@@ -361,9 +361,9 @@
                             <div class="single-service service__style--2 bg-color-gray">
                                 <a>
                                     <div class="service">
-                                        <div class="icon">
+                                        <!--<div class="icon">
                                             <i class="fa-thin fa-user-tie-hair fa-2xs"></i>
-                                        </div>
+                                        </div>-->
                                         <div class="content">
                                             <h3 class="title">Commercial Spaces &amp; Corporate Events</h3>
                                             <p>I am forever passionate about creating the perfect vibe for any event. While I spend many evenings in various venues entertaining club-goers and those who love to dance, my expertise extends beyond the club scene.</p>
@@ -382,9 +382,9 @@
                             <div class="single-service service__style--2 bg-color-gray">
                                 <a>
                                     <div class="service">
-                                        <div class="icon">
+                                        <!--<div class="icon">
                                             <i class="fa-thin fa-rings-wedding fa-2xs"></i>
-                                        </div>
+                                        </div>-->
                                         <div class="content">
                                             <h3 class="title">Engagements, Weddings &amp; Receptions</h3>
                                             <p>Engagements and weddings are some of the most important days of your life, and you want everything to be perfect. That's where I come in. With years of experience and a deep understanding of the diversity of your guests, I can guarantee that everyone will be entertained, and you will have peace of mind.</p>
@@ -403,9 +403,9 @@
                             <div class="single-service service__style--2 bg-color-gray">
                                 <a>
                                     <div class="service">
-                                        <div class="icon">
+                                        <!--<div class="icon">
                                             <i class="fa-thin fa-speakers fa-2xs"></i>
-                                        </div>
+                                        </div>-->
                                         <div class="content">
                                             <h3 class="title">Events, Venues &amp; Residencies</h3>
                                             <p>I’ve been a fixture in Toronto’s music scene since 1998 as both a DJ and promoter. My versatility, passion, and knowledge of music have allowed me to become one of Toronto’s finest in hip hop, house, neo-soul and more.</p>
