--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
                                         </div>-->
                                         <div class="content">
                                             <h3 class="title">Commercial Spaces &amp; Corporate Events</h3>
+                                            <div class="service-img"><img src="assets/images/service/corporate.png" alt="Commercial and Corporate DJ Services by Corey Dawkins" /></div>
                                             <p>I am forever passionate about creating the perfect vibe for any event. While I spend many evenings in various venues entertaining club-goers and those who love to dance, my expertise extends beyond the club scene.</p>
                                             <p>One of Toronto's best-kept secrets is my ability to cater to corporate events and any industry, bringing professionalism and high-quality music to any function. I'm incredibly versatile, able to provide a sound system setup for any sized room or travel light with just my music.</p>
                                             <p>I have the skills necessary to manage sound systems and tailor the soundtrack to fit the demographics of the event. Whether I'm playing in the background or taking center stage, I can toggle back-and-forth with ease. I'm able to queue event audio, mix presentations, and even get people on their feet dancing. These are essential skills that a corporate sound and music professional should possess, and it's what I bring to the table.</p>
@@ -387,6 +388,7 @@
                                         </div>-->
                                         <div class="content">
                                             <h3 class="title">Engagements, Weddings &amp; Receptions</h3>
+                                            <div class="service-img"><img src="assets/images/service/corporate.png" alt="Engagement and Wedding DJ Services by Corey Dawkins" /></div>
                                             <p>Engagements and weddings are some of the most important days of your life, and you want everything to be perfect. That's where I come in. With years of experience and a deep understanding of the diversity of your guests, I can guarantee that everyone will be entertained, and you will have peace of mind.</p>
                                             <p>From punctuality to presentation, flexibility to appropriate music, diplomacy to accommodation, I take care of all the details so that you can enjoy your special day. My personality shines through as I work with your family and friends to create a fun and personalized atmosphere that everyone will enjoy.</p>
                                             <p>As a fervent and dedicated professional, I have an extensive and eclectic library of songs that allows me to play a wide range of genres, including top 40 hits, rock classics, pop beats, jazz numbers, hip-hop tracks, and much more. I work with you to build a personalized track list, and I also craft a do-not-play list to ensure that everything is perfect.</p>
@@ -408,6 +410,7 @@
                                         </div>-->
                                         <div class="content">
                                             <h3 class="title">Events, Venues &amp; Residencies</h3>
+                                            <div class="service-img"><img src="assets/images/service/corporate.png" alt="Event and Venue DJ Services by Corey Dawkins" /></div>
                                             <p>I’ve been a fixture in Toronto’s music scene since 1998 as both a DJ and promoter. My versatility, passion, and knowledge of music have allowed me to become one of Toronto’s finest in hip hop, house, neo-soul and more.</p>
                                             <p>Over the years, I've held a long residencies at numerous venue, such as Stone Lounge at Revival Bar (Toronto), and have always performed at events peppered throughout the city. My musical mantra is “A DJ is like a preacher speaking to a multitude of people, I speak with bass lines, vocals, and chords”.</p>
                                             <p>You can catch me regularly at various venues, house music events, and landing establishments throughout the city. I've worked some of Toronto’s biggest events, such as:<br><br>The Main Ingredient<br>Sweet Tears<br>Hip Hop Vs. House<br>Tortured Soul show</p>
