--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   ></a>
                 </li>
                 <li>
-                  <a href="https://www.mixcloud.com/cdawkins" target="_blank"
+                  <a href="https://www.mixcloud.com/CoreyDawkins77" target="_blank"
                     ><i class="fab fa-mixcloud"></i
                   ></a>
                 </li>
@@ -473,7 +473,7 @@
                             <div class="tab-footer">
                               <p>
                                 <a
-                                  href="https://www.mixcloud.com/cdawkins"
+                                  href="https://www.mixcloud.com/CoreyDawkins77"
                                   target="_blank"
                                   ><small>Hear more on Mixcloud ></small></a
                                 >
@@ -1084,7 +1084,7 @@
               >
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
-                    <a href="blog-details.html">
+                    <a>
                       <img
                         class="w-100"
                         src="assets/images/blog/blog-01.jpg"
@@ -1107,7 +1107,7 @@
               >
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
-                    <a href="blog-details.html">
+                    <a>
                       <img
                         class="w-100"
                         src="assets/images/blog/blog-02.jpg"
@@ -1130,7 +1130,7 @@
               >
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
-                    <a href="blog-details.html">
+                    <a>
                       <img
                         class="w-100"
                         style="aspect-ratio: 2 / 3"
@@ -1275,7 +1275,7 @@
                     ></a>
                   </li>
                   <li>
-                    <a href="https://www.mixcloud.com/cdawkins" target="_blank"
+                    <a href="https://www.mixcloud.com/CoreyDawkins77" target="_blank"
                       ><i class="fab fa-mixcloud"></i
                     ></a>
                   </li>
