--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                         </p>
                         <p>
                           Over the years, I've held a long residencies at
-                          numerous venue, such as Stone Lounge at Revival Bar
+                          numerous venues, such as Stone Lounge at Revival Bar
                           (Toronto), and have always performed at events
                           peppered throughout the city. My musical mantra is “A
                           DJ is like a preacher speaking to a multitude of
