--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
                           neo-soul and more.
                         </p>
                         <p>
-                          Over the years, I've held a long residencies at
+                          Over the years, I've held long residencies at
                           numerous venues, such as Stone Lounge at Revival Bar
                           (Toronto), and have always performed at events
                           peppered throughout the city. My musical mantra is “A
