--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
 
     <!-- CSS
-	============================================ -->
+    ============================================ -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css" />
     <script
@@ -110,7 +110,9 @@
                   ></a>
                 </li>
                 <li>
-                  <a href="https://www.mixcloud.com/CoreyDawkins77" target="_blank"
+                  <a
+                    href="https://www.mixcloud.com/CoreyDawkins77"
+                    target="_blank"
                     ><i class="fab fa-mixcloud"></i
                   ></a>
                 </li>
@@ -934,12 +936,12 @@
                           neo-soul and more.
                         </p>
                         <p>
-                          Over the years, I've held long residencies at
-                          numerous venues, such as Stone Lounge at Revival Bar
-                          (Toronto), and have always performed at events
-                          peppered throughout the city. My musical mantra is “A
-                          DJ is like a preacher speaking to a multitude of
-                          people, I speak with bass lines, vocals, and chords”.
+                          Over the years, I've held long residencies at numerous
+                          venues, such as Stone Lounge at Revival Bar (Toronto),
+                          and have always performed at events peppered
+                          throughout the city. My musical mantra is “A DJ is
+                          like a preacher speaking to a multitude of people, I
+                          speak with bass lines, vocals, and chords”.
                         </p>
                         <p>
                           You can catch me regularly at various venues, house
@@ -988,6 +990,7 @@
               <!-- Start Single Portfolio  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30 d-flex align-items-stretch"
+                style="aspect-ratio: 2 / 3"
               >
                 <div class="portfolio text-center">
                   <div class="thumbnail-inner">
@@ -1012,6 +1015,7 @@
               <!-- Start Single Portfolio  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30 d-flex align-items-stretch"
+                style="aspect-ratio: 2 / 3"
               >
                 <div class="portfolio text-center">
                   <div class="thumbnail-inner">
@@ -1038,6 +1042,7 @@
               <!-- Start Single Portfolio  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30 d-flex align-items-stretch"
+                style="aspect-ratio: 2 / 3"
               >
                 <div class="portfolio text-center">
                   <div class="thumbnail-inner">
@@ -1275,7 +1280,9 @@
                     ></a>
                   </li>
                   <li>
-                    <a href="https://www.mixcloud.com/CoreyDawkins77" target="_blank"
+                    <a
+                      href="https://www.mixcloud.com/CoreyDawkins77"
+                      target="_blank"
                       ><i class="fab fa-mixcloud"></i
                     ></a>
                   </li>
