--- a/index.html
+++ b/index.html
@@ -1097,6 +1097,7 @@
                         alt="Blog Images"
                       />
                     </a>
+                    <span class="missed"></span>
                   </div>
                   <div class="content">
                     <p class="blogtype">&nbsp;</p>
