Update .missed position

--- a/index.html
+++ b/index.html
@@ -1121,6 +1121,7 @@
                         style="aspect-ratio: 2 / 3"
                       />
                     </a>
+                    <span class="missed"></span>
                   </div>
                   <div class="content">
                     <p class="blogtype">&nbsp;</p>
@@ -1144,6 +1145,7 @@
                         alt="Blog Images"
                       />
                     </a>
+                    <span class="missed"></span>
                   </div>
                   <div class="content">
                     <p class="blogtype">&nbsp;</p>
