--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
       name="description"
       content="Looking for a professional DJ who can cater to any event and keep the crowd entertained? Look no further than Corey Dawkins! With years of experience and a versatile music library that spans all genres, Corey has the expertise and skill to create the perfect vibe for weddings, corporate events, parties, and more. From sound system setup to customized track lists, Corey delivers top-notch service that ensures your event is a success. Book Corey Dawkins today and get ready to dance the night away!"
     />
+    <meta name="author" content="Andrew St. Bernard" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <!-- Favicon -->
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="assets/images/favicon.ico"
     />
-
-    <!-- CSS
-    ============================================ -->
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css" />
     <script
       src="https://kit.fontawesome.com/b628d7205f.js"
@@ -32,17 +28,9 @@
     <link rel="stylesheet" href="assets/css/vendor/fontawesome.css" />
     <link rel="stylesheet" href="assets/css/vendor/lightbox.css" />
     <link rel="stylesheet" href="assets/css/plugins/plugins.css" />
-    <!-- <script src="audio/audioplayer/audioplayer.js" type="text/javascript"></script> -->
-    <!-- <link rel='stylesheet' type="text/css" href="audio/audioplayer/audioplayer.css"/> -->
     <link rel="stylesheet" href="assets/css/style.css" />
-
-    <!-- for audo player -->
-    <!-- <script src="./libs/jquery/jquery.js"></script> -->
-    <!-- <link href="./libs/bootstrap/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" type="text/css" href="./style/style.css" />
     <link rel="stylesheet" type="text/css" href="./style/audioplayer.css" />
-
-    <!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
   </head>
 
   <body
