--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJQFYXBBS4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-HJQFYXBBS4');
+    </script>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Corey Dawkins | Toronto DJ, Producer & Promoter</title>
@@ -9,7 +17,7 @@
       name="description"
       content="Looking for a professional DJ who can cater to any event and keep the crowd entertained? Look no further than Corey Dawkins! With years of experience and a versatile music library that spans all genres, Corey has the expertise and skill to create the perfect vibe for weddings, corporate events, parties, and more. From sound system setup to customized track lists, Corey delivers top-notch service that ensures your event is a success. Book Corey Dawkins today and get ready to dance the night away!"
     />
-    <meta name="author" content="Andrew St. Bernard" />
+    <meta name="author" content="Andrew St. Bernard, andrewincode > gmail" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
