--- a/index.html
+++ b/index.html
@@ -795,12 +795,14 @@
                         <h3 class="title">
                           Commercial Spaces &amp; Corporate Events
                         </h3>
+                        </div>
                         <div class="service-img">
                           <img
                             src="assets/images/service/corporate.png"
                             alt="Commercial and Corporate DJ Services by Corey Dawkins"
                           />
                         </div>
+                      <div class="content">
                         <p>
                           I am forever passionate about creating the perfect
                           vibe for any event. While I spend many evenings in
