--- a/index.html
+++ b/index.html
@@ -781,16 +781,12 @@
               </div>
             </div>
             <div class="row">
-              <!-- Start Single Service  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--40 d-flex align-items-stretch"
               >
                 <div class="single-service service__style--2 bg-color-gray">
                   <a>
                     <div class="service">
-                      <!--<div class="icon">
-                                            <i class="fa-thin fa-user-tie-hair fa-2xs"></i>
-                                        </div>-->
                       <div class="content">
                         <h3 class="title">
                           Commercial Spaces &amp; Corporate Events
@@ -845,28 +841,24 @@
                   </a>
                 </div>
               </div>
-              <!-- End Single Service  -->
-
-              <!-- Start Single Service  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--40 d-flex align-items-stretch"
               >
                 <div class="single-service service__style--2 bg-color-gray">
                   <a>
                     <div class="service">
-                      <!--<div class="icon">
-                                            <i class="fa-thin fa-rings-wedding fa-2xs"></i>
-                                        </div>-->
                       <div class="content">
                         <h3 class="title">
                           Engagements, Weddings &amp; Receptions
                         </h3>
+                        </div>
                         <div class="service-img">
                           <img
                             src="assets/images/service/weddings.png"
                             alt="Engagement and Wedding DJ Services by Corey Dawkins"
                           />
                         </div>
+                      <div class="content">
                         <p>
                           Engagements and weddings are some of the most
                           important days of your life, and you want everything
@@ -906,26 +898,22 @@
                   </a>
                 </div>
               </div>
-              <!-- End Single Service  -->
-
-              <!-- Start Single Service  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--40 d-flex align-items-stretch"
               >
                 <div class="single-service service__style--2 bg-color-gray">
                   <a>
                     <div class="service">
-                      <!--<div class="icon">
-                                            <i class="fa-thin fa-speakers fa-2xs"></i>
-                                        </div>-->
                       <div class="content">
                         <h3 class="title">Events, Venues &amp; Residencies</h3>
+                    </div>
                         <div class="service-img">
                           <img
                             src="assets/images/service/venues.png"
                             alt="Event and Venue DJ Services by Corey Dawkins"
                           />
                         </div>
+                      <div class="content">
                         <p>
                           I’ve been a fixture in Toronto’s music scene since
                           1998 as both a DJ and promoter. My versatility,
