--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
                         >
                           <div class="single-tab-content">
                             <iframe
-                              width="560"
-                              height="315"
+                              class="youtube-video"
                               src="https://www.youtube.com/embed/8TX5alUlPJA?controls=0&amp;start=53"
                               title="YouTube video player"
                               frameborder="0"
