--- a/index.html
+++ b/index.html
@@ -956,6 +956,88 @@
         <!-- Start Portfolio Area  -->
         <div
           class="rn-portfolio-area rn-section-gap bg_color--5"
+          id="ruuted"
+          style="border-bottom: 1px solid #444"
+        >
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="section-title section-title--3 text-center mb--30">
+                  <h2 class="title"><img src="assets/images/logo/RUUTED-transparentBg.png" alt="Corey Dawkins' RUUTED" class="banner" /></h2>
+                  <div class="row">
+                    <div class="col-lg-4 text-lg-end">
+                      <h4 class="f-white">What is it?</h4>
+                      <p>
+                        <strong class="f-red">RUUTED</strong> is a gathering where I deliver the best in African, Caribbean and other global Afro-centric rhythms, featuring some of the most angelic vocals. I feel my ancestors speak to me everytime I put on this event.
+                      </p>
+                      <hr>
+                      <p>
+                        Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
+                      </p>
+                    </div>
+                    <div class="col-lg-4 position-relative">
+                      <video class="youtube-video" height="680" controls controlsList="nodownload">
+                        <source src="assets/videos/ruuted.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                      </video>
+                      <div class="play-button">▶</div>
+                    </div>
+                    <div class="col-lg-4 text-lg-start">
+                      <h4 class="f-red">Upcoming RUUTED</h4>
+                      <div class="details">
+                        <div class="info">
+                          <div class="date position-absolute">
+                            <div class="month">May</div>
+                            <div class="day">12<sup>th</sup></div>
+                          </div>
+                          <ul>
+                            <li class="strong">10:00 pm</li>
+                            <li class="venue strong">Junction Underground</li>
+                            <li>2907 Dundas Street West, Toronto</li>
+                            <li class="price strong">$15 <em>at the door</em></li>
+                            <li><a href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a></li>
+                          </ul>
+                        </div>
+                        <div class="guest-dj">
+                          <hr>
+                          <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <ul class="m-0">
+                                <h6 class="f-inherit">Guest starring</h6>
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">Vinny Gr&uuml;vhunter</li>
+                                <li><a href="https://instagram.com/gruvhunter" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @gruvhunter</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring Ron, remove .hide, and put it on other DJs-->
+                          <div class="row pb-10 hide">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/ron-jon.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <ul class="m-0">
+                                <h6>Guest starring</h6>
+                                <li class="text-uppercase">Ron </li>
+                                <li><a href="https://instagram.com/gruvhunter" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @gruvhunter</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <hr>
+                        </div>
+                        <div class=""></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Start Portfolio Area  -->
+        <div
+          class="rn-portfolio-area rn-section-gap bg_color--5"
           id="portfolio"
           style="border-bottom: 1px solid #444"
         >
@@ -963,7 +1045,7 @@
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-title section-title--3 text-center mb--30">
-                  <h2 class="title">Upcoming Events</h2>
+                  <h2 class="title">Other Events</h2>
                   <p>
                     If I'm in your area, and you're looking for a fun night with
                     good music, come join me!
