--- a/index.html
+++ b/index.html
@@ -974,6 +974,9 @@
                       <p>
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
+                      <p class="mb--20">
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a>
+                      </p>
                     </div>
                     <div class="col-lg-4 position-relative">
                       <video class="youtube-video" height="680" controls controlsList="nodownload">
@@ -995,7 +998,7 @@
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1004,8 +1007,8 @@
                           <div class="row pb-10">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
                             <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
                               <ul class="m-0">
-                                <h6 class="f-inherit">Guest starring</h6>
                                 <hr class="f-red">
                                 <li class="text-uppercase f-white">Vinny Gr&uuml;vhunter</li>
                                 <li><a href="https://instagram.com/gruvhunter" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @gruvhunter</a></li>
@@ -1016,9 +1019,9 @@
                           <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/ron-jon.jpg" alt="" /></div>
                             <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
                               <ul class="m-0">
-                                <h6>Guest starring</h6>
-                                <li class="text-uppercase">Ron </li>
+                                <li class="text-uppercase">Ron Jon</li>
                                 <li><a href="https://instagram.com/gruvhunter" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @gruvhunter</a></li>
                               </ul>
                             </div>
@@ -1054,7 +1057,7 @@
               </div>
             </div>
             <div class="row">
-              <!-- Start Single Portfolio  -->
+              <!-- Start Single Portfolio  
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30 d-flex align-items-stretch"
                 style="aspect-ratio: 2 / 3"
@@ -1070,16 +1073,10 @@
                       <h4>
                         <a href="#"><strong>Radius</strong>, Hamilton</a>
                       </h4>
-                      <!--<div class="portfolio-button">
-                                            <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>-->
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- End Single Portfolio  -->
-
-              <!-- Start Single Portfolio  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30 d-flex align-items-stretch"
                 style="aspect-ratio: 2 / 3"
@@ -1097,16 +1094,10 @@
                           ><strong>3030 Dundas West</strong>, Toronto</a
                         >
                       </h4>
-                      <!--<div class="portfolio-button">
-                                            <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>-->
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- End Single Portfolio  -->
-
-              <!-- Start Single Portfolio  -->
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 mt--30 d-flex align-items-stretch"
                 style="aspect-ratio: 2 / 3"
@@ -1124,14 +1115,11 @@
                           ><strong>3030 Dundas West</strong>, Toronto</a
                         >
                       </h4>
-                      <!--<div class="portfolio-button">
-                                            <a class="rn-btn" href="portfolio-details.html">Case Study</a>
-                                        </div>-->
                     </div>
                   </div>
                 </div>
-              </div>
-              <!-- End Single Portfolio  -->
+              </div>-->
+              <!-- End Single Portfolio  
             </div>
           </div>
         </div>
@@ -1146,11 +1134,92 @@
               <div class="col-lg-12">
                 <div class="section-title section-title--3 text-center mb--30">
                   <h2 class="title">Past Events</h2>
-                  <!--<p></p>-->
                 </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row">-->
+
+              <div class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
+                <div class="blog blog-style--1">
+                  <div class="thumbnail">
+                    <a><img class="w-100"
+                        src="assets/images/events/sud-saturdays.jpg"
+                        style="aspect-ratio: 2 / 3" alt="Blog Images" /></a>
+                    <span class="missed hide"></span>
+                  </div>
+                  <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
+                </div>
+              </div>
+
+              <div
+                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
+              >
+                <div class="blog blog-style--1">
+                  <div class="thumbnail">
+                    <a>
+                      <img
+                        class="w-100"
+                        src="assets/images/portfolio/portfolio-8.jpg"
+                        style="aspect-ratio: 2 / 3"
+                        alt="Blog Images"
+                      />
+                    </a>
+                    <span class="missed"></span>
+                  </div>
+                  <div class="content">
+                    <p class="blogtype">&nbsp;</p>
+                    <h4 class="title">&nbsp;</h4>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
+              >
+                <div class="blog blog-style--1">
+                  <div class="thumbnail">
+                    <a>
+                      <img
+                        class="w-100"
+                        src="assets/images/portfolio/portfolio-7.jpg"
+                        alt="Blog Images"
+                        style="aspect-ratio: 2 / 3"
+                      />
+                    </a>
+                    <span class="missed"></span>
+                  </div>
+                  <div class="content">
+                    <p class="blogtype">&nbsp;</p>
+                    <h4 class="title">&nbsp;</h4>
+                    <!--<div class="blog-btn">
+                                        <a class="rn-btn text-white" href="blog-details.html">Read More</a>
+                                    </div>-->
+                  </div>
+                </div>
+              </div>
+              <div
+                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
+              >
+                <div class="blog blog-style--1">
+                  <div class="thumbnail">
+                    <a>
+                      <img
+                        class="w-100"
+                        style="aspect-ratio: 2 / 3"
+                        src="assets/images/portfolio/portfolio-3.jpg"
+                        alt="Blog Images"
+                      />
+                    </a>
+                    <span class="missed"></span>
+                  </div>
+                  <div class="content">
+                    <p class="blogtype">&nbsp;</p>
+                    <h4 class="title">&nbsp;</h4>
+                    <!--<div class="blog-btn">
+                                        <a class="rn-btn text-white" href="blog-details.html">Read More</a>
+                                    </div>-->
+                  </div>
+                </div>
+              </div>
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
               >
@@ -1247,7 +1316,7 @@
                   >
                     <h2 class="title">Wanna Chop It Up?</h2>
                     <p class="description">
-                      Let's talk about how I can create the best possible
+                      Let's create the best possible
                       auditory experience for your event:
                       <!--<a href="tel:+8801923088574">01923 088574</a> or email:
                                         <a href="mailto:admin@example.com"> admin@example.com</a>-->
