--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
             </div>
             <div class="row">-->
 
-              <div class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
+              <div class="offset-lg-4 col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
@@ -1154,151 +1154,6 @@
               <div
                 class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
               >
-                <div class="blog blog-style--1">
-                  <div class="thumbnail">
-                    <a>
-                      <img
-                        class="w-100"
-                        src="assets/images/portfolio/portfolio-8.jpg"
-                        style="aspect-ratio: 2 / 3"
-                        alt="Blog Images"
-                      />
-                    </a>
-                    <span class="missed"></span>
-                  </div>
-                  <div class="content">
-                    <p class="blogtype">&nbsp;</p>
-                    <h4 class="title">&nbsp;</h4>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
-              >
-                <div class="blog blog-style--1">
-                  <div class="thumbnail">
-                    <a>
-                      <img
-                        class="w-100"
-                        src="assets/images/portfolio/portfolio-7.jpg"
-                        alt="Blog Images"
-                        style="aspect-ratio: 2 / 3"
-                      />
-                    </a>
-                    <span class="missed"></span>
-                  </div>
-                  <div class="content">
-                    <p class="blogtype">&nbsp;</p>
-                    <h4 class="title">&nbsp;</h4>
-                    <!--<div class="blog-btn">
-                                        <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>-->
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
-              >
-                <div class="blog blog-style--1">
-                  <div class="thumbnail">
-                    <a>
-                      <img
-                        class="w-100"
-                        style="aspect-ratio: 2 / 3"
-                        src="assets/images/portfolio/portfolio-3.jpg"
-                        alt="Blog Images"
-                      />
-                    </a>
-                    <span class="missed"></span>
-                  </div>
-                  <div class="content">
-                    <p class="blogtype">&nbsp;</p>
-                    <h4 class="title">&nbsp;</h4>
-                    <!--<div class="blog-btn">
-                                        <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>-->
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
-              >
-                <div class="blog blog-style--1">
-                  <div class="thumbnail">
-                    <a>
-                      <img
-                        class="w-100"
-                        src="assets/images/blog/blog-01.jpg"
-                        style="aspect-ratio: 2 / 3"
-                        alt="Blog Images"
-                      />
-                    </a>
-                    <span class="missed"></span>
-                  </div>
-                  <div class="content">
-                    <p class="blogtype">&nbsp;</p>
-                    <h4 class="title">&nbsp;</h4>
-                    <!--<div class="blog-btn">
-                                        <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>-->
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
-              >
-                <div class="blog blog-style--1">
-                  <div class="thumbnail">
-                    <a>
-                      <img
-                        class="w-100"
-                        src="assets/images/blog/blog-02.jpg"
-                        alt="Blog Images"
-                        style="aspect-ratio: 2 / 3"
-                      />
-                    </a>
-                    <span class="missed"></span>
-                  </div>
-                  <div class="content">
-                    <p class="blogtype">&nbsp;</p>
-                    <h4 class="title">&nbsp;</h4>
-                    <!--<div class="blog-btn">
-                                        <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>-->
-                  </div>
-                </div>
-              </div>
-              <div
-                class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch"
-              >
-                <div class="blog blog-style--1">
-                  <div class="thumbnail">
-                    <a>
-                      <img
-                        class="w-100"
-                        style="aspect-ratio: 2 / 3"
-                        src="assets/images/blog/blog-03.jpg"
-                        alt="Blog Images"
-                      />
-                    </a>
-                    <span class="missed"></span>
-                  </div>
-                  <div class="content">
-                    <p class="blogtype">&nbsp;</p>
-                    <h4 class="title">&nbsp;</h4>
-                    <!--<div class="blog-btn">
-                                        <a class="rn-btn text-white" href="blog-details.html">Read More</a>
-                                    </div>-->
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-12">
-                <!--<div class="view-more-btn mt--60 mt_sm--30 text-center">
-                                <a class="rn-button-style--2 btn_solid" href="#">View More</a>
-                            </div>-->
-              </div>
             </div>
           </div>
         </div>
