--- a/index.html
+++ b/index.html
@@ -1139,12 +1139,24 @@
             </div>
             <div class="row">-->
 
-              <div class="offset-lg-2 col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
+              <div class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
                         src="assets/images/events/radius-may20.jpg"
-                        style="aspect-ratio: 2 / 3" alt="Blog Images" /></a>
+                        style="aspect-ratio: 2 / 3" alt="Radius, May 20" /></a>
+                    <span class="missed hide"></span>
+                  </div>
+                  <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
+                <div class="blog blog-style--1">
+                  <div class="thumbnail">
+                    <a><img class="w-100"
+                        src="assets/images/events/jun3.offenhaus.png"
+                        style="aspect-ratio: 2 / 3" alt="Offenhaus, June 3" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
@@ -1156,7 +1168,7 @@
                   <div class="thumbnail">
                     <a><img class="w-100"
                         src="assets/images/events/sud-saturdays.jpg"
-                        style="aspect-ratio: 2 / 3" alt="Blog Images" /></a>
+                        style="aspect-ratio: 2 / 3" alt="Sud Saturdays" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
