--- a/index.html
+++ b/index.html
@@ -1143,8 +1143,8 @@
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
-                        src="assets/images/events/radius-may20.jpg"
-                        style="aspect-ratio: 2 / 3" alt="Radius, May 20" /></a>
+                        src="assets/images/events/jun9.ruuted.png"
+                        style="aspect-ratio: 2 / 3" alt="Ruuted, June 9th" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
