--- a/index.html
+++ b/index.html
@@ -974,9 +974,11 @@
                       <p>
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
+<!--
                       <p class="mb--20">
                         <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a>
                       </p>
+-->
                     </div>
                     <div class="col-lg-4 position-relative">
                       <video class="youtube-video" height="680" controls controlsList="nodownload">
@@ -986,8 +988,8 @@
                       <div class="play-button">▶</div>
                     </div>
                     <div class="col-lg-4 text-lg-start">
-                      <h4 class="f-red">Upcoming RUUTED</h4>
-                      <div class="details">
+                      <h4 class="f-red hide">Upcoming RUUTED</h4>
+                      <div class="details hide">
                         <div class="info">
                           <div class="date position-absolute">
                             <div class="month">May</div>
@@ -1001,7 +1003,7 @@
                             <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a></li>
                           </ul>
                         </div>
-                        <div class="guest-dj">
+                        <div class="guest-dj hide">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
                           <div class="row pb-10">
