--- a/index.html
+++ b/index.html
@@ -1145,8 +1145,8 @@
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
-                        src="assets/images/events/jun9.ruuted.png"
-                        style="aspect-ratio: 2 / 3" alt="Ruuted, June 9th" /></a>
+                        src="assets/images/events/june29.jazzfest.jpg"
+                        style="aspect-ratio: 2 / 3" alt="JazzFest, June 29th" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
@@ -1157,8 +1157,8 @@
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
-                        src="assets/images/events/jun3.offenhaus.png"
-                        style="aspect-ratio: 2 / 3" alt="Offenhaus, June 3" /></a>
+                        src="assets/images/events/june17.radius.jpg"
+                        style="aspect-ratio: 2 / 3" alt="Radius, June 17th" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
@@ -1169,7 +1169,7 @@
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
-                        src="assets/images/events/sud-saturdays.jpg"
+                        src="assets/images/events/saturdays.suds.jpg"
                         style="aspect-ratio: 2 / 3" alt="Sud Saturdays" /></a>
                     <span class="missed hide"></span>
                   </div>
